--- a/Myerp/Tpl/Chanpin/danxiangfuwu.html
+++ b/Myerp/Tpl/Chanpin/danxiangfuwu.html
@@ -79,14 +79,14 @@
               <tbody>
                 <tr>
                   <td nowrap="nowrap" class="paginationActionButtons"><a id="select_link" href="javascript:void(0)" onclick="showbox(this,'selectitem')">选择&nbsp;<img src="<{:__PUBLIC__}>/myerp/images/MoreDetail.png" ></a>&nbsp;
-                    <input class="button" type="button" value=" 添加签证结算报告 " id="qianzheng_create">
-                    <input class="button" type="button" value=" +办证 " id="banzheng_create">
-                    <input class="button" type="button" value=" +交通 " id="jiaotong_create">
-                    <input class="button" type="button" value=" +订房 " id="dingfang_create">
-                    <input class="button" type="button" value=" +订餐 " id="dingcan_create">
-                    <input class="button" type="button" value=" +门票 " id="menpiao_create">
-                    <input class="button" type="button" value=" +导游 " id="daoyou_create">
-                    <input class="button" type="button" value=" +补账 " id="buzhang_create">
+                    <input type="button" class="button" value=" 添加签证结算报告 " id="qianzheng_create">
+                    <input type="button" class="button" value=" +办证 " id="banzheng_create">
+                    <input type="button" class="button" value=" +交通 " id="jiaotong_create">
+                    <input type="button" class="button" value=" +订房 " id="dingfang_create">
+                    <input type="button" class="button" value=" +订餐 " id="dingcan_create">
+                    <input type="button" class="button" value=" +门票 " id="menpiao_create">
+                    <input type="button" class="button" value=" +导游 " id="daoyou_create">
+                    <input type="button" class="button" value=" +补账 " id="buzhang_create">
 					<td nowrap="nowrap" align="right" class="paginationChangeButtons" style="color:#090"><{$page}></td>
                 </tr>
               </tbody>
@@ -116,8 +116,8 @@
             <td scope="row" align="left" valign="top"><{$vol['datatext']['remark']}></td>
             <td scope="row" align="left" valign="top"><php>echo date('Y/m/d',$vol['time'])</php></td>
             <td scope="row" align="left" valign="top">
-              <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>,'签证');">
-              <input type="button" value="删除" name="button" class="button primary" onClick="if(window.confirm('要刪除嗎?')==true)deletebaozhang(<{$vol['chanpinID']}>);" >
+              <input type="button" class="button" value="查看" name="button" onClick="showinfo(<{$vol['chanpinID']}>,'签证');">
+              <input type="button" class="button" value="删除" name="button" onClick="if(window.confirm('要刪除嗎?')==true)deletebaozhang(<{$vol['chanpinID']}>);" >
             </td>
           </tr>
       <php> }}</php>
@@ -145,8 +145,8 @@
             <td scope="row" align="left" valign="top"><{$vol['datatext']['remark']}></td>
             <td scope="row" align="left" valign="top"><php>echo date('Y/m/d',$vol['time'])</php></td>
             <td scope="row" align="left" valign="top">
-              <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>,'签证');">
-              <input type="button" value="删除" name="button" class="button primary" onClick="if(window.confirm('要刪除嗎?')==true)deletebaozhang(<{$vol['chanpinID']}>);" >
+              <input type="button" class="button" value="查看" name="button" onClick="showinfo(<{$vol['chanpinID']}>,'签证');">
+              <input type="button" class="button" value="删除" name="button" onClick="if(window.confirm('要刪除嗎?')==true)deletebaozhang(<{$vol['chanpinID']}>);" >
             </td>
           </tr>
       <php> }}</php>
@@ -176,8 +176,8 @@
             <td scope="row" align="left" valign="top"><{$vol['datatext']['remark']}></td>
             <td scope="row" align="left" valign="top"><php>echo date('Y/m/d',$vol['time'])</php></td>
             <td scope="row" align="left" valign="top">
-              <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>,'签证');">
-              <input type="button" value="删除" name="button" class="button primary" onClick="if(window.confirm('要刪除嗎?')==true)deletebaozhang(<{$vol['chanpinID']}>);" >
+              <input type="button" class="button" value="查看" name="button" onClick="showinfo(<{$vol['chanpinID']}>,'签证');">
+              <input type="button" class="button" value="删除" name="button" onClick="if(window.confirm('要刪除嗎?')==true)deletebaozhang(<{$vol['chanpinID']}>);" >
             </td>
           </tr>
       <php> }}</php>
@@ -207,8 +207,8 @@
             <td scope="row" align="left" valign="top"><{$vol['datatext']['remark']}></td>
             <td scope="row" align="left" valign="top"><php>echo date('Y/m/d',$vol['time'])</php></td>
             <td scope="row" align="left" valign="top">
-              <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>,'签证');">
-              <input type="button" value="删除" name="button" class="button primary" onClick="if(window.confirm('要刪除嗎?')==true)deletebaozhang(<{$vol['chanpinID']}>);" >
+              <input type="button" class="button" value="查看" name="button" onClick="showinfo(<{$vol['chanpinID']}>,'签证');">
+              <input type="button" class="button" value="删除" name="button" onClick="if(window.confirm('要刪除嗎?')==true)deletebaozhang(<{$vol['chanpinID']}>);" >
             </td>
           </tr>
       <php> }}</php>
@@ -235,8 +235,8 @@
             <td scope="row" align="left" valign="top"><{$vol['datatext']['remark']}></td>
             <td scope="row" align="left" valign="top"><php>echo date('Y/m/d',$vol['time'])</php></td>
             <td scope="row" align="left" valign="top">
-              <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>,'签证');">
-              <input type="button" value="删除" name="button" class="button primary" onClick="if(window.confirm('要刪除嗎?')==true)deletebaozhang(<{$vol['chanpinID']}>);" >
+              <input type="button" class="button" value="查看" name="button" onClick="showinfo(<{$vol['chanpinID']}>,'签证');">
+              <input type="button" class="button" value="删除" name="button" onClick="if(window.confirm('要刪除嗎?')==true)deletebaozhang(<{$vol['chanpinID']}>);" >
             </td>
           </tr>
       <php> }}</php>
@@ -246,14 +246,14 @@
               <tbody>
                 <tr>
                   <td nowrap="nowrap" class="paginationActionButtons"><a id="select_link" href="javascript:void(0)" onclick="showbox(this,'selectitem')">选择&nbsp;<img src="<{:__PUBLIC__}>/myerp/images/MoreDetail.png" ></a>&nbsp;
-                    <input class="button" type="button" value=" 添加签证结算报告 " id="qianzheng_create">
-                    <input class="button" type="button" value=" +办证 " id="banzheng_create">
-                    <input class="button" type="button" value=" +交通 " id="jiaotong_create">
-                    <input class="button" type="button" value=" +订房 " id="dingfang_create">
-                    <input class="button" type="button" value=" +订餐 " id="dingcan_create">
-                    <input class="button" type="button" value=" +门票 " id="menpiao_create">
-                    <input class="button" type="button" value=" +导游 " id="daoyou_create">
-                    <input class="button" type="button" value=" +补账 " id="buzhang_create">
+                    <input type="button" class="button" value=" 添加签证结算报告 " id="qianzheng_create">
+                    <input type="button" class="button" value=" +办证 " id="banzheng_create">
+                    <input type="button" class="button" value=" +交通 " id="jiaotong_create">
+                    <input type="button" class="button" value=" +订房 " id="dingfang_create">
+                    <input type="button" class="button" value=" +订餐 " id="dingcan_create">
+                    <input type="button" class="button" value=" +门票 " id="menpiao_create">
+                    <input type="button" class="button" value=" +导游 " id="daoyou_create">
+                    <input type="button" class="button" value=" +补账 " id="buzhang_create">
 					<td nowrap="nowrap" align="right" class="paginationChangeButtons" style="color:#090"><{$page}></td>
                 </tr>
               </tbody>
