--- a/Myerp/Tpl/Chanpin/kongguan.html
+++ b/Myerp/Tpl/Chanpin/kongguan.html
@@ -76,10 +76,10 @@
               <tbody>
                 <tr>
                   <td nowrap="nowrap" class="paginationActionButtons"><a id="select_link" href="javascript:void(0)" onclick="showbox(this,'selectitem')">选择&nbsp;<img src="<{:__PUBLIC__}>/myerp/images/MoreDetail.png" ></a>&nbsp;
-                    <input class="button" type="button" value=" 调价 " id="tiaojia_create">
-                    <input class="button" type="button" value=" 截止/报名 " onclick="jiezhiorbaoming()">
-                    <input class="button" type="button" value=" 下架/上架 " onclick="onoffshop()">
-                    <input class="button" type="button" value=" 删除 " onclick="if(window.confirm('确认删除？')==true)to_delete()">
+                    <input type="button" class="button" value=" 调价 " id="tiaojia_create">
+                    <input type="button" class="button" value=" 截止/报名 " onclick="jiezhiorbaoming()">
+                    <input type="button" class="button" value=" 下架/上架 " onclick="onoffshop()">
+                    <input type="button" class="button" value=" 删除 " onclick="if(window.confirm('确认删除？')==true)to_delete()">
 					<td nowrap="nowrap" align="right" class="paginationChangeButtons" style="color:#090"><{$page}></td>
                 </tr>
               </tbody>
@@ -133,7 +133,7 @@
               <tbody>
                 <tr>
                   <td nowrap="nowrap" class="paginationActionButtons"><a id="select_link" href="javascript:void(0)" onclick="showbox(this,'selectitem')">选择&nbsp;<img src="<{:__PUBLIC__}>/myerp/images/MoreDetail.png" ></a>&nbsp;
-                    <input class="button" type="button" value=" 调价 " id="tiaojia_create">
+                    <input type="button" class="button" value=" 调价 " id="tiaojia_create">
 					<td nowrap="nowrap" align="right" class="paginationChangeButtons" style="color:#090"><{$page}></td>
                 </tr>
               </tbody>
