--- a/Myerp/Tpl/Chanpin/select_tuanyuan.html
+++ b/Myerp/Tpl/Chanpin/select_tuanyuan.html
@@ -15,7 +15,7 @@
                       <tbody>
                         <tr>
                           <td nowrap="nowrap" class="paginationActionButtons"><a id="select_link" href="javascript:void(0)">操作&nbsp;</a>&nbsp;
-                            <input class="button" type="button" value=" 分配 " onclick="doselect()">
+                            <input type="button" class="button" value=" 分配 " onclick="doselect()">
                         </tr>
                       </tbody>
                     </table></td>
