--- a/Myerp/Tpl/Dijie/dingfangquerendan.html
+++ b/Myerp/Tpl/Dijie/dingfangquerendan.html
@@ -149,7 +149,7 @@ function doprint(type){
       </table>
       
       <div class="buttons">
-        <input type="button" value="保存" name="button" class="button primary" onclick="save();">
+        <input type="button" class="button" value="保存" name="button" onclick="save();">
       </div>
     </form>
   </div>
