--- a/Myerp/Tpl/Dijie/fabu.html
+++ b/Myerp/Tpl/Dijie/fabu.html
@@ -264,7 +264,7 @@ function checktitle(){
         </tbody>
       </table>
       <div class="buttons">
-          <input type="button" value="保存" name="button" class="button primary" onclick="if(CheckForm('form','resultdiv_2')) save();">
+          <input type="button" class="button" value="保存" name="button" onclick="if(CheckForm('form','resultdiv_2')) save();">
       </div>
     </form>
   </div>
