--- a/Myerp/Tpl/Index/footer.html
+++ b/Myerp/Tpl/Index/footer.html
@@ -116,7 +116,7 @@ em,i{ font-style:normal;}
   <div id="newsTitle" class="newsTitle"></div>
   <div id="timeNews" class="timeNews"></div>
 <!--  
-  <div id="noticeoper" class="noticeoper"><input type="button" value=" 清 空 " style="float:right" onclick="if(confirm('确定要清空！！')==true)del_alert(1,'全部');" /></div>
+  <div id="noticeoper" class="noticeoper"><input type="button" class="button" value=" 清 空 " style="float:right" onclick="if(confirm('确定要清空！！')==true)del_alert(1,'全部');" /></div>
 -->  
 </div>
 <script>
