--- a/Myerp/Tpl/Index/login.html
+++ b/Myerp/Tpl/Index/login.html
@@ -61,7 +61,7 @@
 									</td></tr>
 									<tr>
 										<td>&nbsp;</td>
-										<td><input title="登录" class="button primary" type="button" tabindex="4" id="login_button" name="Login" value="登录" onClick="dologin();"><br>&nbsp;</td>		
+										<td><input title="登录" type="button" tabindex="4" id="login_button" name="Login" value="登录" onClick="dologin();"><br>&nbsp;</td>		
 									</tr>
 								</tbody></table>
 							</form>
