--- a/Myerp/Tpl/Index/search_dingdan.html
+++ b/Myerp/Tpl/Index/search_dingdan.html
@@ -37,8 +37,8 @@
                       </tbody>
                     </table>
                 </div>
-              <input title="查找" class="button" type="button" value=" 查找 " onclick="_dosearch(1);">&nbsp;
-              <input title="清除" class="button" type="button" value=" 清除 " onclick="clearsearch();">
+              <input type="button" class="button" title="查找" value=" 查找 " onclick="_dosearch(1);">&nbsp;
+              <input type="button" class="button" title="清除" value=" 清除 " onclick="clearsearch();">
         </div>
         
         <div class="search_form" id="searchdiv_2" style="<PHP>if($sorttabid != 2){</PHP>display:none; <PHP>}</PHP>margin-bottom:0px;">
@@ -77,8 +77,8 @@
                       </tbody>
                     </table>
                 </div>
-              <input title="查找" class="button" type="button" value=" 查找 " onclick="_dosearch(2);">&nbsp;
-              <input title="清除" class="button" type="button" value=" 清除 " onclick="clearsearch();">
+              <input type="button" class="button" title="查找" value=" 查找 " onclick="_dosearch(2);">&nbsp;
+              <input type="button" class="button" title="清除" value=" 清除 " onclick="clearsearch();">
         </div>
         <php>unset($_REQUEST['_URL_']);if($_REQUEST){ </php>
         <div style="margin-top:10px;">
