--- a/Myerp/Tpl/Qianzheng/baozhangdanlist.html
+++ b/Myerp/Tpl/Qianzheng/baozhangdanlist.html
@@ -26,8 +26,8 @@
             <td scope="row" align="left" valign="top"><{$vol['renshu']}></td>
             <td scope="row" align="left" valign="top"><{$vol['datatext']['remark']}></td>
             <td scope="row" align="left" valign="top">
-              <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>);">
-              <input type="button" value="删除" name="button" class="button primary" onClick="if(window.confirm('要刪除嗎?')==true)deletebaozhang(<{$vol['chanpinID']}>);" >
+              <input type="button" class="button" value="查看" name="button" onClick="showinfo(<{$vol['chanpinID']}>);">
+              <input type="button" class="button" value="删除" name="button" onClick="if(window.confirm('要刪除嗎?')==true)deletebaozhang(<{$vol['chanpinID']}>);" >
             </td>
           </tr>
         <php>}</php>
