--- a/Myerp/Tpl/SetSystem/tupian.html
+++ b/Myerp/Tpl/SetSystem/tupian.html
@@ -82,8 +82,8 @@ jQuery(document).ready(function(){
                               </tbody>
                             </table>
                         </div>
-                      <input title="查找" class="button" type="button" value=" 查找 " onclick="dosearch();">
-                      <input title="清除" class="button" type="button" value=" 清除 " onclick="clearsearch();">
+                      <input type="button" class="button" title="查找" value=" 查找 " onclick="dosearch();">
+                      <input type="button" class="button" title="清除" value=" 清除 " onclick="clearsearch();">
                 </div>
             </div>
             
@@ -97,8 +97,8 @@ jQuery(document).ready(function(){
                         <tr>
                           <td nowrap="nowrap" class="paginationActionButtons">
                           	<a id="select_link" href="javascript:void(0)" onclick="showbox(this,'selectitem')">选择&nbsp;<img src="<{:__PUBLIC__}>/myerp/images/MoreDetail.png" ></a>&nbsp;
-                            <input class="button" type="button" id="send" onclick="sendValue();" value="确认推送"/>
-                            <input class="button" type="button" id="send" onclick="<{:SITE_ADMIN}>Basedata/add_video" value="添加"/>
+                            <input type="button" class="button" id="send" onclick="sendValue();" value="确认推送"/>
+                            <input type="button" class="button" id="send" onclick="<{:SITE_ADMIN}>Basedata/add_video" value="添加"/>
                           </td>
                           <td nowrap="nowrap" align="right" class="paginationChangeButtons">
                           	<{$page}>
@@ -132,8 +132,8 @@ jQuery(document).ready(function(){
                         <tr>
                           <td nowrap="nowrap" class="paginationActionButtons">
                           	<a id="select_link" href="javascript:void(0)" onclick="showbox(this,'selectitem')">选择&nbsp;<img src="<{:__PUBLIC__}>/myerp/images/MoreDetail.png" ></a>&nbsp;
-                            <input class="button" type="button" id="send" onclick="sendValue();" value="确认推送"/>
-                            <input class="button" type="button" id="send" onclick="<{:SITE_ADMIN}>Basedata/add_video" value="添加"/>
+                            <input type="button" class="button" id="send" onclick="sendValue();" value="确认推送"/>
+                            <input type="button" class="button" id="send" onclick="<{:SITE_ADMIN}>Basedata/add_video" value="添加"/>
                           </td>
                           <td nowrap="nowrap" align="right" class="paginationChangeButtons">
                           	<{$page}>
