--- a/Myerp/Tpl/VIP/bankfileupload.html
+++ b/Myerp/Tpl/VIP/bankfileupload.html
@@ -55,7 +55,7 @@ function dopostUpload(){
                       <INPUT TYPE="hidden" name="uploadResponse" value="uploadComplete">
                       <input type="hidden" name="ajax" value="1">
                       <input type="file" name="attachment" id="attachment" />
-                      <input type="button" value="上传" onclick="dopostUpload()" />
+                      <input type="button" class="button" value="上传" onclick="dopostUpload()" />
                     </form>
                   </td>
                 </tr>
