--- a/Myerp/Tpl/Xiaoshou/index.html
+++ b/Myerp/Tpl/Xiaoshou/index.html
@@ -121,8 +121,8 @@
                       <tbody>
                         <tr>
                           <td valign="top" align="left" style="vertical-align:top;" width="10" >
-                          <input class="button" type="button" value=" 展开 " onclick="opendatelist(<{$i}>)" id="buttomopen<{$i}>" style="float:left">
-                          <input class="button" type="button" value=" 收起 " onclick="closedatelist(<{$i}>)" id="buttomclose<{$i}>" style="display:none; float:left; ">
+                          <input type="button" class="button" value=" 展开 " onclick="opendatelist(<{$i}>)" id="buttomopen<{$i}>" style="float:left">
+                          <input type="button" class="button" value=" 收起 " onclick="closedatelist(<{$i}>)" id="buttomclose<{$i}>" style="display:none; float:left; ">
                           </td>
                           <td valign="top" align="left" colspan="10" class="sall_td" style=" height:37px; overflow:hidden; width:100%; float:left " id="sall_td<{$i}>">
                             <php>foreach($v['zituan'] as $vol){</php>
