--- a/Myerp/Tpl/Caiwu/print_yingshou.html
+++ b/Myerp/Tpl/Caiwu/print_yingshou.html
@@ -13,7 +13,7 @@
                       <tbody>
                         <tr>
                           <td nowrap="nowrap" class="paginationActionButtons">
-                            <input class="button" type="button" value=" 开始打印 " onclick="print();">
+                            <input type="button" class="button" value=" 开始打印 " onclick="print();">
                           </td>
                           <td nowrap="nowrap" align="right" class="paginationChangeButtons">
                           	<{$page}>
