--- a/Myerp/Tpl/Chanpin/header_chanpin.html
+++ b/Myerp/Tpl/Chanpin/header_chanpin.html
@@ -15,6 +15,23 @@ function doshenhe(dotype){
 		}
 	});
 }
+
+function dotest(dotype){
+	ThinkAjax.myloading('resultdiv');
+	var dataID = chanpinID;
+	var datatype = '线路';
+	jQuery.ajax({
+		type:	"POST",
+		url:	SITE_INDEX+"Chanpin/dotest",
+		data:	"chanpinID="+chanpinID+"&datatype="+datatype,
+		success:function(msg){
+			ThinkAjax.myAjaxResponse(msg,'resultdiv',shenhe_after);
+		}
+	});
+}
+
+
+
 function shenhe_after(data,status){
 	if(status == 1){
 		alert(data['status_shenhe']+"操作成功！！");
@@ -77,31 +94,33 @@ function shenhe_after(data,status){
 <div id="resultdiv" class="resultdiv"></div>
 <div id="resultdiv_2" class="resultdiv"></div>
 <div class="buttons">
-  <input type="button" value="审核记录" name="button" class="button primary" style="float:right" id="showshenhe" onclick="shenheshow_doit(<{$chanpinID}>);">
-  
+  <input type="button" class="button" value="审核记录" name="button" style="float:right" id="showshenhe" onclick="shenheshow_doit(<{$chanpinID}>);">
+<!--  
+  <input type="button" class="button" value="审核状态重置" name="button" style="float:right" id="showshenhe" onclick="dotest()">
+-->  
       <php>
       $taskom = A("Method")->_checkOMTaskShenhe($chanpinID,'线路');
       if(false !== $taskom){
       if(cookie('show_action') == '批准'){
       </php>
-      <input type="button" style="float:right" value=" <php>echo cookie('show_word');</php> " name="button" onclick="doshenhe('检出');">
+      <input type="button" class="button" style="float:right" value=" <php>echo cookie('show_word');</php> " name="button" onclick="doshenhe('检出');">
       <php>}if(cookie('show_action') == '申请'){
       </php>
-      <input type="button" style="float:right" value=" <php>echo cookie('show_word');</php> " name="button" onclick="doshenhe('申请');">
+      <input type="button" class="button" style="float:right" value=" <php>echo cookie('show_word');</php> " name="button" onclick="doshenhe('申请');">
       <php>}}else{</php>
-      <input type="button" style="float:right" value="审核" name="button" onclick="alert('计调未申请审核！！！')" >
+      <input type="button" class="button" style="float:right" value="审核" name="button" onclick="alert('计调未申请审核！！！')" >
       <php>}if(A("Method")->checkshenheback($chanpinID,'线路')){</php>
-      <input type="button" style="float:right" value=" 审核回退 " name="button" onclick="if(window.confirm('审核回退？')==true)shenhe_back(<{$chanpinID}>,'线路');">
+      <input type="button" class="button" style="float:right" value=" 审核回退 " name="button" onclick="if(window.confirm('审核回退？')==true)shenhe_back(<{$chanpinID}>,'线路');">
 	  <php>}</php>
       <label style="float:right; margin:2px 4px 0 0; font-size:12px"> | 审核流程：<strong><{$tem_cp['shenhe_remark']}></strong></label>
       <label style="float:right; margin:2px 4px 0 0; font-size:12px">锁状态：<strong><{$tem_cp['islock']}></strong></label>
       
   
   <php>if('基本信息' == $nowDir['title']){if($kind == '包团' || $xianlu['kind'] == '包团') $kind = '包团';</php>
-  <input type="button" value="保存" name="button" class="button primary" onclick="if(CheckForm('form','resultdiv_2')) save('<{$kind}>');">
+  <input type="button" class="button" value="保存" name="button" onclick="if(CheckForm('form','resultdiv_2')) save('<{$kind}>');">
   <php>}</php>
   <php>if('行程' == $nowDir['title']){</php>
-  <input type="button" value="保存" name="button" class="button primary" onClick="save();">
+  <input type="button" class="button" value="保存" name="button" onClick="save();">
   <php>}</php>
 </div>
 
