--- a/Myerp/Tpl/Chanpin/shenhe.html
+++ b/Myerp/Tpl/Chanpin/shenhe.html
@@ -182,7 +182,7 @@
                   <td scope="row" align="left" valign="top"><{$v['datatext_copy']['shenhe_remark']}></td>
                   <td scope="row" align="left" valign="top"><php>echo date('Y/m/d H:i',$v['time']);</php></td>
                   <td scope="row" align="left" valign="top">
-              <input type="button" value="查看" name="button" class="button primary" onClick="showinfo_item(<{$v['datatext_copy']['parentID']}>);">
+              <input type="button" class="button" value="查看" name="button" onClick="showinfo_item(<{$v['datatext_copy']['parentID']}>);">
                   </td>
                 </tr>
                 <php> }}</php>
@@ -208,7 +208,7 @@
                   <td scope="row" align="left" valign="top"><{$v['datatext_copy']['shenhe_remark']}></td>
                   <td scope="row" align="left" valign="top"><php>echo date('Y/m/d H:i',$v['time']);</php></td>
                   <td scope="row" align="left" valign="top">
-              <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$v['datatext_copy']['chanpinID']}>);">
+              <input type="button" class="button" value="查看" name="button" onClick="showinfo(<{$v['datatext_copy']['chanpinID']}>);">
                   </td>
                 </tr>
                 <php> }}</php>
@@ -242,7 +242,7 @@
                   <td scope="row" align="left" valign="top"><{$v['remark']}></td>
                   <td scope="row" align="left" valign="top"><php>echo date('Y/m/d H:i',$v['time']);</php></td>
                   <td scope="row" align="left" valign="top">
-              <input type="button" value="查看" name="button" class="button primary" onClick="show_dingdan(<{$v['chanpinID']}>);">
+              <input type="button" class="button" value="查看" name="button" onClick="show_dingdan(<{$v['chanpinID']}>);">
                   </td>
                 </tr>
                 <php> }}</php>
