--- a/Myerp/Tpl/Dijie/print_dingfang.html
+++ b/Myerp/Tpl/Dijie/print_dingfang.html
@@ -21,7 +21,7 @@ td	{ padding:7px 0;}
 <table width="700" border="0" align="center" cellpadding="0" cellspacing="0" bgcolor="#ECE9D8" id="dayinDiv" name="dayinDiv">
   <tr>
     <td height="20">
-    <input class="button" type="button" value=" 开始打印 " onclick="print();">
+    <input type="button" class="button" value=" 开始打印 " onclick="print();">
     </td>
   </tr>
 </table>
