--- a/Myerp/Tpl/Message/gonggao.html
+++ b/Myerp/Tpl/Message/gonggao.html
@@ -24,7 +24,7 @@
                         <tr>
                           <td nowrap="nowrap" class="paginationActionButtons">
 <php>if($is_fabu){</php>      
-                            <input class="button" type="button" value=" 发布 " onclick="opendialog_1()">
+                            <input type="button" class="button" value=" 发布 " onclick="opendialog_1()">
 <php>}</php>
                           </td>
                           <td nowrap="nowrap" align="right" class="paginationChangeButtons">
@@ -50,8 +50,8 @@
                   <td scope="row" align="center" valign="top"><php>echo date('Y/m/d H:i',$v['time'])</php></td>
                   <td scope="row" align="center" valign="top">
 <php>if($is_fabu){</php>      
-                        <input class="button" type="button" value=" 删除 " onclick="if(window.confirm('是否确认删除“<{$v['title']}>”公告?')==true)infodelete('<{$v[messageID]}>')">
-                        <input class="button" type="button" value=" 编辑 " onclick="infoedit('<{$v[messageID]}>')">
+                        <input type="button" class="button" value=" 删除 " onclick="if(window.confirm('是否确认删除“<{$v['title']}>”公告?')==true)infodelete('<{$v[messageID]}>')">
+                        <input type="button" class="button" value=" 编辑 " onclick="infoedit('<{$v[messageID]}>')">
 <php>}</php>
                   </td>
                 </tr>
