--- a/Myerp/Tpl/Message/paituanbiao.html
+++ b/Myerp/Tpl/Message/paituanbiao.html
@@ -23,7 +23,7 @@
                         <tr>
                           <td nowrap="nowrap" class="paginationActionButtons">
 <php>if($is_fabu){</php>      
-                            <input class="button" type="button" value=" 发布 " onclick="opendialog_1()">
+                            <input type="button" class="button" value=" 发布 " onclick="opendialog_1()">
 <php>}</php>
                           </td>
                           <td nowrap="nowrap" align="right" class="paginationChangeButtons">
@@ -47,11 +47,11 @@
                   <td scope="row" align="center" valign="top"><{$v['title']}></td>
                   <td scope="row" align="center" valign="top">
 <php>if($is_fabu){</php>      
-                        <input class="button" type="button" value=" 删除 " onclick="if(window.confirm('是否确认删除“<{$v['title']}>”排团表?')==true)infodelete('<{$v[messageID]}>')">
-                        <input class="button" type="button" value=" 编辑 " onclick="infoedit('<{$v[messageID]}>')">
+                        <input type="button" class="button" value=" 删除 " onclick="if(window.confirm('是否确认删除“<{$v['title']}>”排团表?')==true)infodelete('<{$v[messageID]}>')">
+                        <input type="button" class="button" value=" 编辑 " onclick="infoedit('<{$v[messageID]}>')">
 <php>}</php>
                         <PHP>if($v['url_file']){</PHP>
-                        <input class="button" type="button" value=" 下载 " onclick="download('<{$v[url_file]}>')">
+                        <input type="button" class="button" value=" 下载 " onclick="download('<{$v[url_file]}>')">
                         <PHP>}</PHP>
                   </td>
                 </tr>
