--- a/Myerp/Tpl/Qianzheng/baoming.html
+++ b/Myerp/Tpl/Qianzheng/baoming.html
@@ -227,7 +227,7 @@ function ajaxalert(title){
       <table width="100%" border="0" cellpadding="0" cellspacing="0">
         <tbody>
           <tr>
-            <td align="center" colspan="5" style="height: 32px"><input type="button" value="提交" onClick="return checktable();"  class="anu"></td>
+            <td align="center" colspan="5" style="height: 32px"><input type="button" class="button" value="提交" onClick="return checktable();"  class="anu"></td>
           </tr>
         </tbody>
       </table>
