--- a/Myerp/Tpl/Xiaoshou/baomingnext.html
+++ b/Myerp/Tpl/Xiaoshou/baomingnext.html
@@ -216,7 +216,7 @@ function save(){
     <table width="100%" border="0" cellpadding="0" cellspacing="0">
       <tbody>
         <tr>
-          <td align="center" colspan="5" style="height: 32px"><input type="button" value="保 存" id="Button1" class="anu" onClick="if(CheckForm('form1','resultdiv_2'))save()" /></td>
+          <td align="center" colspan="5" style="height: 32px"><input type="button" class="button" value="保 存" id="Button1" class="anu" onClick="if(CheckForm('form1','resultdiv_2'))save()" /></td>
         </tr>
       </tbody>
     </table>
