--- a/Myerp/Tpl/Xiaoshou/index.html
+++ b/Myerp/Tpl/Xiaoshou/index.html
@@ -105,7 +105,7 @@
                   <th scope="col" nowrap="nowrap" style="min-width:50px;"><div> 单位 </div></th>
                 </tr>
                 
-                <php>$i = 0;foreach($chanpin_list as $v){$i++;</php>
+                <php>$i = 0;foreach($chanpin_list as $v){$i++;  if($login_user['title'] == 'aaa')dump($v);  </php>
                 <tr height="40" class="evenListRowS1">
                   <td valign="top" align="left" scope="row"><{$i}></td>
                   <td valign="top" align="center" scope="row"><strong style="color:blue"><{$v['xianlu_title']}></strong></td>
